--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/dist/output.css" rel="stylesheet">
     <title>TailwindCSS入門</title>
-</head>
-<body>
-</body>
+  </head>
+  <body>
+    <h1 class="text-7xl font-bold">TailwindCSS入門</h2>
+  </body>
 </html>
