--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
     <title>TailwindCSS入門</title>
   </head>
   <body>
-    <h1 class="text-7xl font-bold">TailwindCSS入門</h2>
+    <div class="border border-blue-400 p-16 my-10">
+      <h1 class="text-7xl font-bold">TailwindCSS入門</h2>  
+    </div>
+    <div class="border border-blue-400 p-16 my-10">
+      <h1 class="text-7xl font-bold">TailwindCSS入門</h2>  
+    </div>
   </body>
 </html>
