--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="border border-blue-400 p-16 my-10">
-      <h1 class="text-7xl font-bold">TailwindCSS入門</h2>  
+      <h1 class="lg:text-7xl font-bold text-3xl sm:text-red-400 md:text-blue-400 lg:text-pink-400 xl:text-green-400">TailwindCSS入門</h2>  
     </div>
     <div class="border border-blue-400 p-16 my-10">
       <h1 class="text-7xl font-bold">TailwindCSS入門</h2>  
