簡単なボタンを通常のCSSで記述

--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,8 @@
     <div class="border border-blue-400 p-16 my-10">
       <h1 class="text-7xl font-bold">TailwindCSS入門</h2>  
     </div>
+    <button class="easy-button">
+      ボタン
+    </button>
   </body>
 </html>
