簡単なボタンをTailwindCSSで記述

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,7 @@
     <div class="border border-blue-400 p-16 my-10">
       <h1 class="text-7xl font-bold">TailwindCSS入門</h2>  
     </div>
-    <button class="easy-button">
-      ボタン
-    </button>
+    <button class="easy-button">ボタン</button>
+    <button class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded ml-10">ボタン</button>
   </body>
 </html>
