--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,6 @@
     <button class="easy-button">ボタン</button>
     <button class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded ml-10">ボタン</button>
     <button class="btn-blue btn">ボタン</button>
+    <button class="btn bg-primary-500">ボタン</button>
   </body>
 </html>
