ポートフォリオサイト作成用に初期化

--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/dist/output.css" rel="stylesheet">
-    <title>TailwindCSS入門</title>
+    <title>ポートフォリオサイト</title>
   </head>
   <body>
-    <div class="border border-blue-400 p-16 my-10">
-      <h1 class="lg:text-7xl font-bold text-3xl sm:text-red-400 md:text-blue-400 lg:text-pink-400 xl:text-green-400">TailwindCSS入門</h2>  
-    </div>
-    <div class="border border-blue-400 p-16 my-10">
-      <h1 class="text-7xl font-bold">TailwindCSS入門</h2>  
-    </div>
-    <button class="easy-button">ボタン</button>
-    <button class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded ml-10">ボタン</button>
-    <button class="btn-blue btn">ボタン</button>
-    <button class="btn bg-primary-500">ボタン</button>
+    <h1>Hello world!!</h1>  
   </body>
 </html>
