--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="font-poppins">
+  <body class="font-poppins bg-body text-white">
     <h1>Hello world!!</h1>
   </body>
 </html>
