--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,18 @@
     />
   </head>
   <body class="font-poppins bg-body text-white">
-    <h1>Hello world!!</h1>
+    <!-- ナビゲーションバー -->
+    <header class="py-6">
+      <div>
+        <div>ShinCode.com</div>
+        <div>
+          <a href="#home">ホーム</a>
+          <a href="#home">ポートフォリオ</a>
+          <a href="#home">お客様</a>
+          <a href="#home"><button>お問い合わせ</button></a>
+        </div>
+      </div>
+    </header>
+    <!--  -->
   </body>
 </html>
