--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,13 @@
   <body class="font-poppins bg-body text-white">
     <!-- ナビゲーションバー -->
     <header class="py-6">
-      <div>
+      <div class="container mx-auto">
         <div>ShinCode.com</div>
         <div>
           <a href="#home">ホーム</a>
-          <a href="#home">ポートフォリオ</a>
-          <a href="#home">お客様</a>
-          <a href="#home"><button>お問い合わせ</button></a>
+          <a href="#portfolio">ポートフォリオ</a>
+          <a href="#clients">お客様</a>
+          <a href="#contact"><button>お問い合わせ</button></a>
         </div>
       </div>
     </header>
