--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,31 @@
   <body class="font-poppins bg-body text-white">
     <!-- ナビゲーションバー -->
     <header class="py-6">
-      <div class="container mx-auto flex justify-between items-center px-8 md:px-14 lg:px-24 w-full">
-        <div>ShinCode.com</div>
-        <div>
-          <a href="#home">ホーム</a>
-          <a href="#portfolio">ポートフォリオ</a>
-          <a href="#clients">お客様</a>
-          <a href="#contact"><button>お問い合わせ</button></a>
+      <div
+        class="container mx-auto flex justify-between items-center px-8 md:px-14 lg:px-24 w-full"
+      >
+        <div class="text-lg">ShinCode.com</div>
+        <div class="space-x-12">
+          <a
+            href="#home"
+            class="hover:text-selected-text transition-all duration-300"
+            >ホーム</a
+          >
+          <a
+            href="#portfolio"
+            class="hover:text-selected-text transition-all duration-300"
+            >ポートフォリオ</a
+          >
+          <a
+            href="#clients"
+            class="hover:text-selected-text transition-all duration-300"
+            >お客様</a
+          >
+          <a
+            href="#contact"
+            class="hover:text-selected-text transition-all duration-300"
+            ><button>お問い合わせ</button></a
+          >
         </div>
       </div>
     </header>
