--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,13 @@
       href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300&family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body class="font-poppins bg-body text-white">
     <!-- ナビゲーションバー -->
@@ -20,7 +27,7 @@
         class="container mx-auto flex justify-between items-center px-8 md:px-14 lg:px-24 w-full"
       >
         <div class="text-lg">ShinCode.com</div>
-        <div class="space-x-12">
+        <div class="space-x-12 hidden md:flex items-center">
           <a
             href="#home"
             class="hover:text-selected-text transition-all duration-300"
@@ -43,6 +50,9 @@
               お問い合わせ
             </button></a
           >
+        </div>
+        <div class="md:hidden">
+          <i class="fa-solid fa-bars"></i>
         </div>
       </div>
     </header>
