ヒーローセクションの大枠を設置

--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,13 @@
         </div>
       </div>
     </header>
-    <!--  -->
+
+    <!-- ヒーローセクション -->
+    <div
+      id="home"
+      class="container mt-16 flex justify-between items-center mx-auto px-8 md:px-14 ld:px-24 w-full"
+    >
+      <div class="flex md:flex-wrap"></div>
+    </div>
   </body>
 </html>
