--- a/src/index.html
+++ b/src/index.html
@@ -60,9 +60,23 @@
     <!-- ヒーローセクション -->
     <div
       id="home"
-      class="container mt-16 flex justify-between items-center mx-auto px-8 md:px-14 ld:px-24 w-full"
+      class="container mt-16 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full"
     >
-      <div class="flex md:flex-wrap"></div>
+      <div class="flex flex-wrap md:flex-nowrap">
+        <div class="md:my-36 md:ml-20">
+          <h1 class="font-bold text-5xl text-center md:text-left lg:text-7xl md:text-6xl">
+            TailwindCSSで <br />
+            美しいサイトを<br />
+            作ります
+          </h1>
+          <button
+            class="px-6 py-4 bg-theme font-bold rounded-lg hover:bg-purple-600 transition-all duration-300 mt-10"
+          >
+            <i class="fa-solid fa-rocket-launch mr-1"></i>
+            <span>もっと見る</span>
+          </button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
