--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,9 @@
     >
       <div class="flex flex-wrap md:flex-nowrap">
         <div class="md:my-36 md:ml-20">
-          <h1 class="font-bold text-5xl text-center md:text-left lg:text-7xl md:text-6xl">
+          <h1
+            class="font-bold text-5xl text-center md:text-left lg:text-7xl md:text-6xl"
+          >
             TailwindCSSで <br />
             美しいサイトを<br />
             作ります
@@ -76,6 +78,11 @@
             <span>もっと見る</span>
           </button>
         </div>
+        <img
+          src="./images/human.jpg"
+          alt="images"
+          class="md:absolute lg:top-2 lg:right-52 md:w-3/5 w-10/12 mt-12 md:mt-0 right-6 mx-auto -z-10 lg:w-3/6"
+        />
       </div>
     </div>
   </body>
