--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,9 @@
       class="container mt-16 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full"
     >
       <div class="flex flex-wrap md:flex-nowrap">
-        <div class="md:my-36 md:ml-20">
+        <div
+          class="md:my-36 lg:ml-20 justify-center md:justify-start max-w-xl flex flex-wrap mt-0"
+        >
           <h1
             class="font-bold text-5xl text-center md:text-left lg:text-7xl md:text-6xl"
           >
