--- a/src/index.html
+++ b/src/index.html
@@ -87,5 +87,18 @@
         />
       </div>
     </div>
+
+    <!-- ポートフォリオセクション -->
+    <div
+      id="portfolio"
+      class="container mt-64 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full"
+    >
+      <section class="w-full">
+        <h2 class="secondary-title">私のポートフォリオ</h2>
+        <p class="section-paragraph">
+          私が作ってきたWebアプリケーションがこちら
+        </p>
+      </section>
+    </div>
   </body>
 </html>
