スキルアピールできるセクションを作成

--- a/src/index.html
+++ b/src/index.html
@@ -39,9 +39,9 @@
             >ポートフォリオ</a
           >
           <a
-            href="#clients"
+            href="#skills"
             class="hover:text-selected-text transition-all duration-300"
-            >お客様</a
+            >スキル一覧</a
           >
           <a href="#contact"
             ><button
@@ -132,5 +132,26 @@
         </div>
       </section>
     </div>
+
+    <!-- スキルスタック -->
+    <div
+      id="portfolio"
+      class="container mt-64 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full"
+    >
+      <section class="w-full">
+        <h2 class="secondary-title">スキルスタック</h2>
+        <p class="section-paragraph">
+          私は以下のプログラミング言語を10年以上取り扱ってきました
+        </p>
+        <div class="my-16">
+          <div class="w-full border border-purple-300"></div>
+          <!-- 言語のロゴ -->
+          <div>
+            <i class="fa-brands fa-square-js text-7xl text-yellow-300"></i>
+          </div>
+        </div>
+      </section>
+    </div>
+
   </body>
 </html>
