スキル説明セクションを追加

--- a/src/index.html
+++ b/src/index.html
@@ -144,14 +144,28 @@
           私は以下のプログラミング言語を10年以上取り扱ってきました
         </p>
         <div class="my-16">
-          <div class="w-full border border-purple-300"></div>
-          <!-- 言語のロゴ -->
-          <div>
-            <i class="fa-brands fa-square-js text-7xl text-yellow-300"></i>
+          <div
+            class="w-full border border-purple-300 p-16 lg:px-32 lg:py-20 flex justify-center lg:justify-start flex-wrap space-x-32"
+          >
+            <!-- 言語のロゴ -->
+            <div>
+              <i class="fa-brands fa-square-js text-7xl text-yellow-300"></i>
+            </div>
+
+            <!-- スキルの説明 -->
+            <div>
+              <h3 class="text-3xl font-semibold">JavaScript</h3>
+              <div>
+                <div>ウェブサイド制作</div>
+                <div>フロントエンド開発</div>
+              </div>
+              <p>
+                JavaScriptエンジニア。普段はReactを使って開発現場で働いています。
+              </p>
+            </div>
           </div>
         </div>
       </section>
     </div>
-
   </body>
 </html>
