--- a/src/index.html
+++ b/src/index.html
@@ -148,16 +148,18 @@
             class="w-full border border-purple-300 p-16 lg:px-32 lg:py-20 flex justify-center lg:justify-start flex-wrap space-x-32"
           >
             <!-- 言語のロゴ -->
-            <div>
-              <i class="fa-brands fa-square-js text-7xl text-yellow-300"></i>
+            <div class="mb-6 lg:mb-0 self-center">
+              <i class="fa-brands fa-square-js text-9xl text-yellow-300"></i>
             </div>
 
             <!-- スキルの説明 -->
             <div>
               <h3 class="text-3xl font-semibold">JavaScript</h3>
-              <div>
-                <div>ウェブサイド制作</div>
-                <div>フロントエンド開発</div>
+              <div
+                class="flex flex-wrap w-full justify-center gap-3 lg:w-auto lg:justify-start mt-6 mb-8"
+              >
+                <div class="badge">ウェブサイド制作</div>
+                <div class="badge">フロントエンド開発</div>
               </div>
               <p>
                 JavaScriptエンジニア。普段はReactを使って開発現場で働いています。
