レスポンシブ対応

--- a/src/index.html
+++ b/src/index.html
@@ -145,7 +145,7 @@
         </p>
         <div class="my-16">
           <div
-            class="w-full border border-purple-300 p-16 lg:px-32 lg:py-20 flex justify-center lg:justify-start flex-wrap space-x-32"
+            class="w-full border border-purple-300 p-16 lg:px-32 lg:py-20 flex justify-center lg:justify-start flex-wrap lg:space-x-32 hover:border-yellow-300 transition-all duration-300 cursor-pointer"
           >
             <!-- 言語のロゴ -->
             <div class="mb-6 lg:mb-0 self-center">
@@ -153,7 +153,9 @@
             </div>
 
             <!-- スキルの説明 -->
-            <div>
+            <div
+              class="text-center flex flex-wrap justify-center lg:text-left lg:block"
+            >
               <h3 class="text-3xl font-semibold">JavaScript</h3>
               <div
                 class="flex flex-wrap w-full justify-center gap-3 lg:w-auto lg:justify-start mt-6 mb-8"
@@ -161,7 +163,7 @@
                 <div class="badge">ウェブサイド制作</div>
                 <div class="badge">フロントエンド開発</div>
               </div>
-              <p>
+              <p class="text-secondary">
                 JavaScriptエンジニア。普段はReactを使って開発現場で働いています。
               </p>
             </div>
