--- a/src/index.html
+++ b/src/index.html
@@ -223,5 +223,31 @@
         </div>
       </section>
     </div>
+
+    <!-- お問い合わせ -->
+    <div
+      id="portfolio"
+      class="container mt-64 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full"
+    >
+      <section class="w-full">
+        <h2 class="secondary-title">お問い合わせ</h2>
+        <p class="section-paragraph">
+          私の経歴が気になる方はご一報ください。即時対応します。
+        </p>
+        <div class="w-full grid lg:grid-cols-2 gap-8 lg:gap-32 mt-16">
+          <div>
+            <div>
+              <label class="text-white block mb-6 text-x1 font-bold"
+                >お名前</label
+              >
+              <input
+                type="text"
+                class="w-full border border-inputBorder bg-input px-4 py-4"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
