--- a/src/index.html
+++ b/src/index.html
@@ -269,6 +269,22 @@
               <span>送信</span>
             </button>
           </div>
+          <div>
+            <p class="text-secondary">000-1111-2222</p>
+            <a href="mailto:takizawazaku@gmail.com">takizawazaku@gmail.com</a>
+            <!-- SNS -->
+            <div class="mt-20 space-x-6">
+              <a href="#">
+                <i class="fa-brands fa-twitter text-3xl text-blue-400"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-facebook text-3xl text-blue-600"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-instagram text-3xl text-pink-400"></i>
+              </a>
+            </div>
+          </div>
         </div>
       </section>
     </div>
