--- a/src/index.html
+++ b/src/index.html
@@ -135,7 +135,7 @@
 
     <!-- スキルスタック -->
     <div
-      id="portfolio"
+      id="skills"
       class="container mt-64 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full"
     >
       <section class="w-full">
@@ -226,7 +226,7 @@
 
     <!-- お問い合わせ -->
     <div
-      id="portfolio"
+      id="contact"
       class="container mt-52 mb-20 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full"
     >
       <section class="w-full">
